# las_lag

./: .flake8.cfg  .gitignore  .pre-commit-config.yaml  .pylintrc  alembic.ini  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
auth/: utils.py
core/: settings.py
core/models/: __init__.py  db_helper.py  order.py  order_product_ossociation.py  post.py  product.py  profile.py  user.py
migrations/: env.py
migrations/versions/: 2024_07_21_1600-7d1492667b6f_create_products_table.py  2024_07_21_1627-e2117d3ac8a7_create_users_table.py  2024_07_22_1832-b1ea3de258b7_create_profile_and_post_table.py  2024_07_22_2141-623b9af9aec9_create_user_profile_post_products_tables.py  2024_07_23_2142-61b7d9fbd1b4_create_order_table.py  2024_07_23_2206-6c5ad0278b10_create_order_product_association_table.py  2024_07_26_2154-092fb41936f5_add_count_column_to_order_product_.py  2024_07_26_2250-ca7b0afd2442_add_unit_price_column_to_order_product_.py
users/: schemas.py  views.py
